[package]
name = "yayti"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
regex = "1.7.0"
reqwest = "0.11.12"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["preserve_order"] }
substring = "1.4.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urldecode = "0.1.1"
log = { version = "0.4.6", features = ["release_max_level_error", "max_level_debug"] }
