[package]
name = "yayti"
version = "0.3.0"
edition = "2021"

[build-dependencies]
prost-build = "0.11.9"

[dependencies]
chrono = "0.4.23"
regex = "1.7.0"
reqwest = { version = "0.11.12", optional = true }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["preserve_order"] }
substring = "1.4.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
log = { version = "0.4.6", features = ["release_max_level_error", "max_level_debug"] }
shared = {path = "./scripts/shared"}
serial_test = "2.0.0"
boa_engine = { version = "0.16.0", optional = true }
base64 = "0.21.0"
urlencoding = "2.1.2"
rand = "0.8.5"
prost = "0.11.9"
bytes = "1.4.0"

[features]
default = ["scrape_pages", "innertube"]
innertube = ["dep:reqwest"]
scrape_pages = ["dep:reqwest"]
parse_languages_to_published = []
decipher_streams = ["dep:boa_engine"]
