[package]
name = "create-month-name-translation-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yayti = {path = "../../../yayti"}
shared = {path = "../shared"}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87", features = ["preserve_order"] }
chrono = "0.4.24"
regex = "1.8.1"
